train evaluate and track with mlflow

--- a/notebook/QA/analysis_QA.ipynb
+++ b/notebook/QA/analysis_QA.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# QA & QA.1\n",
+    "\n",
+    "## Objectives:\n",
+    "This notebook ment to tackle QA and QA.1 with the below descriptions:\n",
+    "\n",
+    "Calculate on the entire dataset the 5th, 50th and 95th percentiles (q05, q50, q95) on the dataset\n",
+    "values: `fare_amount`  , `tip_amount`  and `total_amount` ; divided according to the  `VendorID` , `passenger_count`  and  `payment_type`  fields\n",
+    "The calculation output must be a dataFrame to be exported in `CSV` format organized with:\n",
+    "Columns: field name (on which the percentile is calculated) + “_p_” + percentile threshold\n",
+    "Rows (index): grouping field name + ” _” + value of the group on which the percentile calculation is performed\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -9,6 +25,20 @@
     "import os\n",
     "\n",
     "os.chdir(\"../../\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import Libraries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `CONFIG`, and `PARAMS` are read from [config.yaml](../../config.yaml) and [params.yaml](../../params.yaml) subsequently. which are two files for controling directories and parameters needed by the application."
    ]
   },
   {
@@ -49,30 +79,9 @@
     "`VendorID`: Identifier for the TPEP provider supplying the record.\n",
     "- 1 = Creative Mobile Technologies, LLC\n",
     "- 2 = VeriFone Inc.\n",
-    "\n",
-    "`tpep_pickup_datetime`: The date and time when the meter was activated.\n",
-    "\n",
-    "`tpep_dropoff_datetime`: The date and time when the meter was turned off.\n",
-    "\n",
     "`Passenger_count`: The number of passengers in the vehicle, as entered by the driver.\n",
     "\n",
     "`Trip_distance`: The distance of the trip in miles, as recorded by the taximeter.\n",
-    "\n",
-    "`PULocationID`: TLC Taxi Zone where the meter was engaged.\n",
-    "\n",
-    "`DOLocationID`: TLC Taxi Zone where the meter was disengaged.\n",
-    "\n",
-    "`RateCodeID`: The applicable rate code at the end of the trip.\n",
-    "- 1 = Standard rate\n",
-    "- 2 = JFK\n",
-    "- 3 = Newark\n",
-    "- 4 = Nassau or Westchester\n",
-    "- 5 = Negotiated fare\n",
-    "- 6 = Group ride\n",
-    "\n",
-    "`Store_and_fwd_flag`: Indicates if the trip record was stored in the vehicle's memory before transmission to the vendor due to lack of server connection.\n",
-    "- Y = Store and forward trip\n",
-    "- N = Not a store and forward trip\n",
     "\n",
     "`Payment_type`: How the passenger paid for the trip, represented by a numeric code.\n",
     "- 1 = Credit card\n",
@@ -84,17 +93,14 @@
     "\n",
     "`Fare_amount`: The fare as calculated by the meter based on time and distance.\n",
     "\n",
-    "`Extra`: Additional charges, currently including only the $0.50 and $1 rush hour and overnight charges.\n",
-    "\n",
-    "`MTA_tax`: A $0.50 tax automatically added based on the metered rate.\n",
-    "\n",
-    "`Improvement_surcharge`: A $0.30 surcharge added at the start of the trip, implemented since 2015.\n",
-    "\n",
-    "`Tip_amount`: Credit card tip amounts. (Note: Cash tips are not recorded here.)\n",
-    "\n",
-    "`Tolls_amount`: Total tolls paid during the trip.\n",
-    "\n",
     "`Total_amount`: The total charge to passengers, excluding cash tips."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The user can read the dataset using `read_dataset` method defined in the `Data` class. Subsequently, the data will be group by the features: `VendorID` , `passenger_count`  and  `payment_type`  fields and then the percentiles for the columns: `fare_amount`  , `tip_amount`  and `total_amount` will be calculated and saved into [percentiles.csv](../../artifacts/QA/percentiles.csv)"
    ]
   },
   {
@@ -178,6 +184,13 @@
     "        if not os.path.exists(f'{CONFIG.QA.PERCENTILE_DATAFRAME_PATH}'): \n",
     "            os.makedirs(f'{CONFIG.QA.PERCENTILE_DATAFRAME_PATH}')\n",
     "            df.to_csv(f'{CONFIG.QA.PERCENTILE_DATAFRAME_PATH}/{CONFIG.QA.PERCENTILE_DATAFRAME_FILE}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The user will define a pipeline to execute the task as below."
    ]
   },
   {
